# context-sync

./: .gitignore  IMPLEMENTATION_SUMMARY.md  SECURITY.md  azure-deployment.json  config.example.json  cron-sync.sh  deploy.ps1  pyproject.toml  pytest.ini  requirements.txt  run-windows.bat  run-windows.ps1  run.sh  setup.py  startup-catchup.sh  work-context-sync.aliases.sh  work-context-sync.spec
.github/workflows/: deploy-winget.yml  initial-deploy.yml  release.yml
azure-function/: AZURE-FUNCTION-SETUP.md  function_app.py  host.json  local.settings.json  requirements.txt
docs/: README.md  index.html  styles.css
installer/wix/: work-context-sync.wxs
packaging/: README.md
power-automate/: POWER-AUTOMATE-FLOWS.md
scripts/: build-release.ps1  deploy-winget-repo.ps1
src/work_context_sync/: __init__.py  app.py  async_graph_client.py  async_pipeline.py  auth.py  config.py  graph_client.py  pipeline.py
src/work_context_sync/analytics/: __init__.py  meetings.py
src/work_context_sync/commands/: timeblock.py
src/work_context_sync/models/: __init__.py  base.py  calendar.py  config.py  enums.py  exceptions.py  mail.py  todo.py
src/work_context_sync/sources/: __init__.py  calendar.py  mail.py  planner.py  teams_chats.py  teams_meetings.py  todo.py
src/work_context_sync/timeblock/: __init__.py  analyzer.py  calendar_writer.py  learning_tracker.py  models.py  rebalance_engine.py  scheduler.py
src/work_context_sync/utils/: __init__.py  logging_config.py
src/work_context_sync/writers/: __init__.py  markdown_writer.py  raw_writer.py
tests/: __init__.py  conftest.py  test_async.py  test_config.py  test_graph_client.py  test_logging.py  test_models.py
winget-repo/: AZUREAD-SETUP.md  index.html  index.json  source.json
winget-repo/manifests/m/MidtownTechnologyGroup/WorkContextSync/: 1.0.0.yaml  locale.yaml  version.yaml
winget-repo/packageManifests/m/MidtownTechnologyGroup/WorkContextSync/: 1.0.0.json
